--- a/templates/experiencia copy.html
+++ b/templates/experiencia copy.html
@@ -3,7 +3,9 @@
 
 <head>
    <meta charset="UTF-8" />
-   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
    <title>Experiencia</title>
    <link rel="stylesheet" href="/css/Timeline.css" />
 
