--- a/css/Stylesskills.css
+++ b/css/Stylesskills.css
@@ -62,4 +62,9 @@ body{
     transform: translateX(
         50px
     ); /* Mueve los elementos hacia la derecha 5px cuando el mouse pasa por encima */
+    background-image: linear-gradient( rgb(0, 255, 234), rgb(0, 132, 255));
+    background-repeat: no-repeat; /* Evita la repetición de la imagen de fondo */
+    background-size: cover; /* Ajusta la imagen de fondo para cubrir todo el cuerpo */
+    background-attachment: fixed; /* Fija la imagen de fondo para que no se desplace al desplazarse */
+    line-height: 1; /* Establece la altura de línea del texto en 1 */
 }
