--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Contacto</title>
-   </head>
-   <body>
-      <a href="../index.html">Volver</a>
-   </body>
+
+<head>
+   <link rel="stylesheet" href="/css/Stylescontacto.css">
+   <meta charset="UTF-8" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <title>Contacto</title>
+</head>
+
+<body>
+   <a href="../index.html">Volver</a>
+</body>
+
 </html>
