--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -1,15 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
-   <link rel="stylesheet" href="/css/Stylescontacto.css">
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Contacto</title>
+   <link rel="stylesheet" href="/css/Stylesskills2.css" />
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+   <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-   <a href="../index.html">Volver</a>
+   <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #17a2b8;">
+      <div class="container-fluid">
+         <a class="navbar-brand" href="#">Contacto</a>
+         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+         </button>
+         <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+               <a class="nav-link" href="/index.html"><i class="fa-solid fa-house"></i></a>
+            </li>
+         </ul>
+      </div>
+      </div>
+   </nav>
+
+   <div class="container">
+      <div id="contacto" class="skills-section">
+         <h1><i class="fas fa-envelope"></i> Contacto</h1>
+         <p>Puedes contactarme a través de la siguiente información:</p>
+         <ul>
+            <li><i class="fas fa-envelope"></i> Correo Electrónico:
+               Bastiansotopizarro@gmail.com</li>
+            <li><i class="fas fa-phone"></i> Teléfono:
+               +56972005886</li>
+            <li><i class="fas fa-map-marker-alt"></i> Dirección:
+               20 de agosto, Andacollo , Región de Coquimbo</li>
+            <li> <a href="/templates/curriculum.html">
+                  <button type="button" class="btn btn-primary">curriculum</button>
+               </a>
+            </li>
+         </ul>
+
+
+      </div>
+   </div>
 </body>
 
 </html>
