--- a/templates/educacion.html
+++ b/templates/educacion.html
@@ -3,80 +3,63 @@
 
 <head>
    <meta charset="UTF-8" />
-   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <title>pruebas</title>
-   <link rel="stylesheet" href="/css/Stylesoptions.css" />
-
+   <title>Educacion</title>
+   <link rel="stylesheet" href="/css/Stylesskills2.css" />
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-   <!-- Latest compiled JavaScript -->
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
    <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
 </head>
 
-<body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50">
-   <nav class="navbar navbar-expand-md  fixed-top" id="nav-bar">
+<body>
+   <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #17a2b8;">
       <div class="container-fluid">
-         <ul class="navbar-nav">
-            <li class="nav-item">
-               <a class="nav-link" href="../index.html">
-                  <i class="fa-solid fa-house"></i>
-                  <a href="../index.html" class="button type1"></a>
-               </a>
-            </li>
-            <li class="nav-item">
-               <a class="nav-link" href="#educacion">Educacion</a>
-            </li>
-            <li class="nav-item">
-               <a class="nav-link" href="#cursos">Cursos</a>
-            </li>
-         </ul>
+         <a class="navbar-brand" href="#">Educación</a>
+         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+         </button>
+         <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+               <li class="nav-item">
+                  <a class="nav-link" href="#sup">Superior</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="#media">Media</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="#basica">Basica</a>
+               </li>
+            </ul>
+            <ul class="nav-bar-nav ms-auto">
+               <li class="nav-item">
+                  <a class="nav-link" href="/index.html"><i class="fa-solid fa-house"></i></a>
+               </li>
+            </ul>
+         </div>
       </div>
    </nav>
 
-   <div id="educacion" class="container-fluid">
-      <h1><i class="fa-solid fa-user-graduate"></i> Educación</h1>
-      <br />
-      <div class="card">
-         <div class="card-header">
-            <h3><i class="fa-regular fa-clock"></i> 2013 - 2016</h3>
-         </div>
-         <h5>Liceo Pedro Regalado Videla Ordenes</h5>
-         <p>Titulado técnico nivel medio en administración de empresas</p>
+   <div class="container">
+      <div id="sup" class="skills-section">
+         <h1><i class="fa-solid fa-user-graduate"></i> Superior</h1>
+         <h2>INACAP</h2>
+         <div class="skill-box">Analista Programador</div>
+         <h2>Universidad de La Serena</h2>
+         <div class="skill-box">Ingenieria en computacion (6 Semestres)</div>
       </div>
-      <br />
-      <div class="card">
-         <div class="card-header">
-            <h3><i class="fa-regular fa-clock"></i> 2017 - 2019</h3>
-         </div>
-         <h5>Universidad de la serena</h5>
-         <p>6 semestres cursados en ingenieria en computacion</p>
-      </div>
-      <br>
-      <div class="card">
-         <div class="card-header">
-            <h3> <i class="fa-regular fa-clock"></i> 2020- 2022</h3>
-         </div>
-         <h5>Inacap</h5>
-         <p>Egresado analistra programador</p>
-      </div>
-      <br>
-   </div>
 
-   <div id="cursos" class="container-fluid">
-      <br>
-      <h1> <i class="fa-solid fa-graduation-cap"></i> Cursos</h1>
-      <br />
-      <h3>Curso de contabilidad Sence</h3>
-      <p>Curso de contabilidad</p>
-      <br />
-      <h3>Curso de altura lifetraining</h3>
-      <p>Curso para realizar trabajos en altura.</p>
-      <br />
-      <h3>Manejo de extintores mutual</h3>
-      <p>Curso para el correcto uso de extintores.</p>
-      <br>
+      <div id="media" class="skills-section">
+         <h1><i class="fa-solid fa-book-open-reader"></i> Media</h1>
+         <h2>Liceo Pedro Regalado Videla</h2>
+         <div class="skill-box">Tecnico en administracion de empresas</div>
+      </div>
+
+      <div id="basica" class="skills-section">
+         <h1><i class="fa-solid fa-school"></i> Basica</h1>
+         <h2>Colegio Nuestra Señora del Rosario</h2>
+         <div class="skill-box">1° Basico hasta 8° basico</div>
+      </div>
    </div>
 </body>
 
