--- a/templates/proyectos.html
+++ b/templates/proyectos.html
@@ -1,11 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
-   <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Proyectos</title>
-   </head>
-   <body>
-      <a href="../index.html">Volver</a>
-   </body>
+<html lang="es">
+
+<head>
+   <meta charset="UTF-8" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <title>Proyectos</title>
+   <link rel="stylesheet" href="/css/Stylesprojects.css" />
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+   <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+   <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #17a2b8;">
+      <div class="container-fluid">
+         <a class="navbar-brand" href="#">Proyectos</a>
+         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+         </button>
+         <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+               <a class="nav-link" href="/index.html"><i class="fa-solid fa-house"></i></a>
+            </li>
+         </ul>
+      </div>
+   </nav>
+
+   <div class="container">
+      <div id="proyectos" class="skills-section">
+         <h1><i class="fas fa-laptop-code"></i> Proyectos</h1>
+
+         <!-- Proyecto 1 -->
+         <div class="card mb-3">
+            <div class="card-body">
+               <h5 class="card-title">Portafolio</h5>
+               <p class="card-text">Mi portafolio en línea es una herramienta valiosa para presentarme a empleadores
+                  potenciales, clientes o cualquier persona interesada en mi trabajo y habilidades. Proporciona una
+                  visión completa de mi formación, experiencia y proyectos anteriores, lo que me permite destacar y
+                  demostrar mis capacidades de manera efectiva. También es una excelente manera de establecer una
+                  presencia en línea profesional.</p>
+               <div>
+                  <a href="https://www.ejemplo.com/tecnologia1" target="_blank">
+                     <img src="/images/iconos/html-5.png" alt="html" class="icon">
+                  </a>
+                  <a href="https://www.ejemplo.com/tecnologia2" target="_blank">
+                     <img src="/images/iconos/css-3.png" alt="css" class="icon">
+                  </a>
+                  <a href="https://www.ejemplo.com/tecnologia3" target="_blank">
+                     <img src="/images/iconos/js.png" alt="js" class="icon">
+                  </a>
+               </div>
+            </div>
+         </div>
+
+         <!-- Proyecto 2 -->
+         <div class="card mb-3">
+            <div class="card-body">
+               <h5 class="card-title">Lista To-Do</h5>
+               <p class="card-text">Una aplicación web que permita a los usuarios agregar, eliminar y marcar como
+                  completadas tareas en una lista de tareas. La aplicación debe ser interactiva y actualizarse en tiempo
+                  real cuando se realizan cambios en las tareas.</p>
+               <div>
+                  <a href="https://www.ejemplo.com/tecnologia4" target="_blank">
+                     <img src="/images/iconos/icons8-python.gif" alt="" class="icon">
+                  </a>
+                  <a href="https://www.ejemplo.com/tecnologia5" target="_blank">
+                     <i class="fa-brands fa-react fa-spin icon"></i>
+                  </a>
+                  <a href="https://www.ejemplo.com/tecnologia6" target="_blank">
+                     <img src="/images/iconos/icons8-nodejs-48.png" alt="" class="icon">
+                  </a>
+               </div>
+            </div>
+         </div>
+
+         <!-- Proyecto 3 -->
+      </div>
+   </div>
+</body>
+
 </html>
